--- a/index.html
+++ b/index.html
@@ -7,8 +7,20 @@
      <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <script href="script.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    
+    <nav>
+        <div class="nav-container">
+            <a href="index.html" class="logo"><i class="fa-regular fa-futbol"></i></a>
+
+            <div class="link-container">
+                <a href="">Quiz</a>
+                <a href="">Mål</a>
+                <a href="">Osv</a>
+            </div>
+        </div>
+    </nav>
+
 </body>
 </html>
