--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
-     <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <script href="script.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
     <nav>
         <div class="nav-container">
@@ -22,5 +26,25 @@
         </div>
     </nav>
 
+    <div class="bilde-container">
+        <img src="" alt="Messi">
+    </div>
+
+    <div class="innhold">
+        <div class="tall">10</div>
+
+        <div class="tekst-innhold">
+            <div class="tittel">
+                The story behind <br>Lionel Messi
+            </div>
+
+            <p class="beskrivelse">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum nobis quam autem voluptatem porro soluta,
+                saepe repudiandae animi at voluptatibus quia possimus eligendi officia veritatis repellat quo,
+                perferendis corporis magni!
+            </p>
+        </div>
+    </div>
 </body>
+
 </html>
