styling av bilde og tekst (ikke ferdigstilt)

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Cal+Sans&family=DM+Serif+Text:ital@1&family=Lato:wght@300&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -26,23 +31,27 @@
         </div>
     </nav>
 
-    <div class="bilde-container">
-        <img src="" alt="Messi">
-    </div>
+    <div class="master-container">
 
-    <div class="innhold">
-        <div class="tall">10</div>
+        <div class="bilde-container">
+            <img src="messi-stående.png" alt="Messi">
+        </div>
 
-        <div class="tekst-innhold">
-            <div class="tittel">
-                The story behind <br>Lionel Messi
+        <div class="innhold">
+            <div class="tall">10</div>
+
+            <div class="tekst-innhold">
+                <div class="tittel">
+                    The story behind <br>Lionel Messi
+                </div>
+
+                <p class="beskrivelse">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum nobis quam autem voluptatem porro
+                    soluta,
+                    saepe repudiandae animi at voluptatibus quia possimus eligendi officia veritatis repellat quo,
+                    perferendis corporis magni!
+                </p>
             </div>
-
-            <p class="beskrivelse">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum nobis quam autem voluptatem porro soluta,
-                saepe repudiandae animi at voluptatibus quia possimus eligendi officia veritatis repellat quo,
-                perferendis corporis magni!
-            </p>
         </div>
     </div>
 </body>
