--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
                 </div>
 
                 <p class="beskrivelse">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum nobis quam autem voluptatem porro
-                    soluta,
-                    saepe repudiandae animi at voluptatibus quia possimus eligendi officia veritatis repellat quo,
-                    perferendis corporis magni!
+                    Lionel Messi er en av tidenes største fotballspillere, kjent for sin utrolige teknikk, målsans og
+                    evne til å avgjøre kamper. Han har hatt en fantastisk karriere i både FC Barcelona, Paris
+                    Saint-Germain og det argentinske landslaget, der han blant annet har vunnet både VM og Ballon d'Or.
+                    For meg er Messi ikke bare en legende - han er også min favorittspiller.
                 </p>
             </div>
         </div>
