farge, tekst str og font

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Cal+Sans&family=DM+Serif+Text:ital@1&family=Lato:wght@300&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Cal+Sans&family=DM+Serif+Text:ital@1&family=Lato:wght@300&family=Playwrite+DK+Loopet:wght@100..400&display=swap"
         rel="stylesheet">
 </head>
 
