start på ny html struktur og litt css

--- a/index.html
+++ b/index.html
@@ -54,6 +54,17 @@
             </div>
         </div>
     </div>
+
+    <div class="junior-container">
+
+        <div class="content">
+
+        </div>
+
+        <div class="bilde-karusell">
+
+        </div>
+    </div>
 </body>
 
 </html>
