--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <nav>
         <div class="nav-container">
-            <a href="index.html" class="logo"><i class="fa-regular fa-futbol"></i></a>
+            <a href="index.html" class="logo"><i class="fa-solid fa-mountain"></i></i></a>
 
             <div class="link-container">
                 <a href="">Quiz</a>
@@ -30,6 +30,12 @@
             </div>
         </div>
     </nav>
+
+    <div class="forside">
+        <div class="forside-bilde">
+            <img src="mont_blanc_cinematic_bw.jpg" alt="fjell">
+        </div>
+    </div>
 
     <div class="master-container">
 
@@ -52,17 +58,6 @@
                     For meg er Messi ikke bare en legende - han er også min favorittspiller.
                 </p>
             </div>
-        </div>
-    </div>
-
-    <div class="junior-container">
-
-        <div class="content">
-
-        </div>
-
-        <div class="bilde-karusell">
-
         </div>
     </div>
 </body>
