ferdistilling av forside og bildestruktur

--- a/index.html
+++ b/index.html
@@ -33,11 +33,15 @@
 
     <div class="forside">
         <div class="forside-bilde">
-            <img src="mont_blanc_cinematic_bw.jpg" alt="fjell">
+            <img src="bilder/mont-blanc-modified.jpg" alt="fjell">
         </div>
 
         <div class="overskrift">
             <h1>Chamonix</h1>
+        </div> 
+
+        <div class="quote">
+            <p>Chamonix est un carrefour où<br>se rencontrent les vents, les neiges, les rochers<br>et les rêves des hommes</p>
         </div>
     </div>
 
