--- a/fjell.html
+++ b/fjell.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Fjellopplevelser</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
@@ -23,27 +26,36 @@
             <a href="index.html" class="logo"><i class="fa-solid fa-mountain"></i></i></a>
 
             <div class="link-container">
-                <a href="fjell.html">Fjellopplevelser</a>
+                <a href="">Fjellopplevelser</a>
                 <a href="">Apres Ski</a>
                 <a href="">Chamonix Livsstil</a>
             </div>
         </div>
     </nav>
+    
+    <div class="master-container">
 
-    <div class="forside">
-        <div class="forside-bilde">
-            <img src="bilder/mont_blanc_cinematic_bw.jpg" alt="fjell">
+        <div class="bilde-container">
+            <img src="messi-stående.png" alt="Messi">
         </div>
 
-        <div class="overskrift">
-            <h1>Chamonix</h1>
-        </div> 
+        <div class="innhold">
+            <div class="tall">10</div>
 
-        <div class="quote">
-            <p>Chamonix est un carrefour où<br>se rencontrent les vents, les neiges, les rochers<br>et les rêves des hommes</p>
+            <div class="tekst-innhold">
+                <div class="tittel">
+                    The story behind <br>Lionel Messi
+                </div>
+
+                <p class="beskrivelse">
+                    Lionel Messi er en av tidenes største fotballspillere, kjent for sin utrolige teknikk, målsans og
+                    evne til å avgjøre kamper. Han har hatt en fantastisk karriere i både FC Barcelona, Paris
+                    Saint-Germain og det argentinske landslaget, der han blant annet har vunnet både VM og Ballon d'Or.
+                    For meg er Messi ikke bare en legende - han er også min favorittspiller.
+                </p>
+            </div>
         </div>
     </div>
-<script src="script.js"></script>
 </body>
 
 </html>
